[gd_scene load_steps=9 format=3 uid="uid://dbk44vc824ok5"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_pvsyp"]
[ext_resource type="AudioStream" uid="uid://deaarvtwnb74u" path="res://Sounds/bullet_firing.wav" id="3_owgqh"]
[ext_resource type="Texture2D" uid="uid://xu7ewjpbjbed" path="res://Sprites/spaceship_1.png" id="3_qg5te"]
[ext_resource type="AudioStream" uid="uid://dr6a335onkkmj" path="res://Sounds/spaceship_engine.ogg" id="4_yasu6"]
[ext_resource type="AudioStream" uid="uid://dlh5vfg0ag7wf" path="res://Sounds/space_impact.wav" id="5_od7a5"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_feje3"]
friction = 0.0
bounce = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gkdqi"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(15, 1, 1)
direction = Vector3(0, -1, 0)
spread = 10.0
initial_velocity_min = 64.0
initial_velocity_max = 64.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 2.0
color = Color(0.92549, 0.25098, 0.27451, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_c377h"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(3, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(3, 1, 1)
direction = Vector3(0, -1, 0)
spread = 10.0
initial_velocity_min = 64.0
initial_velocity_max = 64.0
gravity = Vector3(0, 0, 0)
color = Color(1, 0.615686, 0.0666667, 1)

[node name="Player" type="RigidBody2D" groups=["player"]]
position = Vector2(0, -1.43051e-06)
disable_mode = 2
mass = 2000.0
physics_material_override = SubResource("PhysicsMaterial_feje3")
gravity_scale = 0.0
max_contacts_reported = 10
contact_monitor = true
linear_damp_mode = 1
script = ExtResource("1_pvsyp")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 3.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 3.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-1, 1.43051e-06)
polygon = PackedVector2Array(67, 2, 42, 7, 25, 9, 22, 17, 17, 18, 14, 21, 7, 20, -3, 66, 3, 69, -4, 70, -28, 67, -29, 64, -18, 64, -28, 21, -50, 48, -62, 47, -54, 20, -65, 17, -66, 9, -60, 5, -66, 1, -59, -5, -64, -4, -66, -12, -63, -17, -52, -19, -62, -46, -51, -47, -29, -21, -18, -64, -30, -65, -21, -67, 4, -68, -3, -66, 7, -21, 16, -19, 24, -17, 23, -8, 45, -7, 67, -2)

[node name="Sprite2D2" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_qg5te")

[node name="GPUParticles2D_Red" type="GPUParticles2D" parent="Sprite2D2"]
position = Vector2(-73.3333, -440)
amount = 128
process_material = SubResource("ParticleProcessMaterial_gkdqi")
lifetime = 0.5
fixed_fps = 144
trail_enabled = true
trail_lifetime = 2.0

[node name="GPUParticles2D_Orange" type="GPUParticles2D" parent="Sprite2D2"]
position = Vector2(-73.3333, -446.667)
amount = 64
process_material = SubResource("ParticleProcessMaterial_c377h")
lifetime = 0.2
fixed_fps = 144
trail_enabled = true
trail_lifetime = 1.0

[node name="GPUParticles2D_Red2" type="GPUParticles2D" parent="Sprite2D2"]
position = Vector2(73.3333, -446.667)
amount = 128
process_material = SubResource("ParticleProcessMaterial_gkdqi")
lifetime = 0.5
fixed_fps = 144
trail_enabled = true
trail_lifetime = 2.0

[node name="GPUParticles2D_Orange2" type="GPUParticles2D" parent="Sprite2D2"]
position = Vector2(73.3333, -453.333)
amount = 64
process_material = SubResource("ParticleProcessMaterial_c377h")
lifetime = 0.2
fixed_fps = 144
trail_enabled = true
trail_lifetime = 1.0

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2(23, 42)

[node name="BulletPoint2" type="Node2D" parent="."]
position = Vector2(21, -45)

[node name="AudioStreamPlayer2D_Cannon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_owgqh")
volume_db = -25.0

[node name="AudioStreamPlayer2D_Engine" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_yasu6")
volume_db = -15.0

[node name="AudioStreamPlayer2D_Collision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_od7a5")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
